# HospOps-Forecast

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  py-min.yml  release.yml
docs/: architecture.md  data_schema.md
examples/data/: sample_flights.csv  sample_hk_actual.csv  sample_reservations.csv
hospops_forecast/: cli.py  features.py
hospops_forecast/api/: app.py
hospops_forecast/calibration/: labor_calibrator.py
hospops_forecast/config/: base.yaml  loader.py  schema.py
hospops_forecast/dq/: validators.py
hospops_forecast/models/: __init__.py  airline.py  base.py  departments.py  fnb.py  labor.py  learning.py  queueing.py  service.py
hospops_forecast/segmentation/: __init__.py  archetypes.py  segmenter.py
streamlit_app/: app.py
tests/: test_airline.py  test_depts.py  test_fnb.py  test_fnb_meals.py  test_labor.py  test_learning.py  test_segmenter.py  test_service.py  test_service_sla.py
